Fix resize handler css alignment

--- a/client/src/components/LiveMarkdownPreview/index.css
+++ b/client/src/components/LiveMarkdownPreview/index.css
@@ -188,7 +188,7 @@ blockquote::before {
     border-radius: 30px;
     background-color: #ffffff23;
     right: -7px;
-    top: 51.5%;
+    top: 50.5%;
     transition: all 0.3s ease;
 }
 
